# test-tasks

./: README.md
AVPT-test-tasks/: readme.md
AVPT-test-tasks/task_1/: CMakeLists.txt  main.cpp  readme.md
AVPT-test-tasks/task_2/: CMakeLists.txt  iobuffer.cpp  iobuffer.h  main.cpp  readme.md
test_kontest/Task_A/: main.cpp  readme.md
test_kontest/Task_B/: main.cpp  readme.md
test_kontest/Task_C/: main.cpp  readme.md
yandex_pay/: CMakeLists.txt  base64.cpp  base64.h  main.cpp  readme.md  test.txt
